fixed layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -357,10 +357,10 @@ opacity: 0.5;
 
 .flights{
   width: max-content!important;
-  padding: 1rem!important;
-  margin: auto 0 1rem;
+  padding: 1rem 0rem!important;
+  margin: auto 1rem 1rem 1rem;
 }
 
 .screen{
-  margin: 0 auto!important;
+  margin: 0 auto;
 }
